// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`stores > credential > should deleteCredential secretbinding and referenced secret / quota 1`] = `
{
  "metadata": {
    "name": "azure-secretbinding",
    "namespace": "garden-test",
  },
  "provider": {
    "type": "azure",
  },
  "quotas": [
    {
      "name": "azure-foo-quota",
      "namespace": "garden-trial",
    },
    {
      "name": "azure-bar-quota",
      "namespace": "garden-test",
    },
  ],
  "secretRef": {
    "name": "azure-secret",
    "namespace": "garden-test",
  },
}
`;

exports[`stores > credential > should deleteCredential secretbinding and referenced secret / quota 2`] = `
{
  "data": {
    "secret": "cw==",
  },
  "metadata": {
    "name": "azure-secret",
    "namespace": "garden-test",
  },
}
`;

exports[`stores > credential > should deleteCredential secretbinding and referenced secret / quota 3`] = `
{
  "metadata": {
    "name": "azure-foo-quota",
    "namespace": "garden-trial",
  },
}
`;

exports[`stores > credential > should deleteCredential secretbinding and referenced secret / quota 4`] = `
{
  "metadata": {
    "name": "azure-bar-quota",
    "namespace": "garden-test",
  },
}
`;

exports[`stores > credential > should not delete secret or quota if referenced by other SecretBinding 1`] = `
{
  "metadata": {
    "name": "azure-secretbinding",
    "namespace": "garden-test",
  },
  "provider": {
    "type": "azure",
  },
  "quotas": [
    {
      "name": "azure-foo-quota",
      "namespace": "garden-trial",
    },
    {
      "name": "azure-bar-quota",
      "namespace": "garden-test",
    },
  ],
  "secretRef": {
    "name": "azure-secret",
    "namespace": "garden-test",
  },
}
`;

exports[`stores > credential > should not delete secret or quota if referenced by other SecretBinding 2`] = `
{
  "data": {
    "secret": "cw==",
  },
  "metadata": {
    "name": "azure-secret",
    "namespace": "garden-test",
  },
}
`;

exports[`stores > credential > should not delete secret or quota if referenced by other SecretBinding 3`] = `
{
  "metadata": {
    "name": "azure-foo-quota",
    "namespace": "garden-trial",
  },
}
`;

exports[`stores > credential > should not delete secret or quota if referenced by other SecretBinding 4`] = `
{
  "metadata": {
    "name": "azure-bar-quota",
    "namespace": "garden-test",
  },
}
`;

exports[`stores > credential > should not delete secret or quota if referenced by other SecretBinding 5`] = `
{
  "data": {
    "secret": "cw==",
  },
  "metadata": {
    "name": "azure-secret",
    "namespace": "garden-test",
  },
}
`;

exports[`stores > credential > should not delete secret or quota if referenced by other SecretBinding 6`] = `
{
  "metadata": {
    "name": "azure-foo-quota",
    "namespace": "garden-trial",
  },
}
`;

exports[`stores > credential > should return cloudProviderBindingList with multiple quotas 1`] = `
{
  "data": {
    "secret": "cw==",
  },
  "metadata": {
    "name": "azure-secret",
    "namespace": "garden-test",
  },
}
`;

exports[`stores > credential > should return cloudProviderBindingList with multiple quotas 2`] = `
{
  "metadata": {
    "name": "azure-bar-quota",
    "namespace": "garden-test",
  },
}
`;

exports[`stores > credential > should return dnsBindingList 1`] = `
[
  "aws-route53",
  "azure-dns",
  "azure-private-dns",
  "google-clouddns",
  "openstack-designate",
  "alicloud-dns",
  "infoblox-dns",
  "netlify-dns",
  "rfc2136",
]
`;

exports[`stores > credential > should return infrastructureBindingList 1`] = `
[
  "aws",
  "azure",
  "gcp",
  "openstack",
  "alicloud",
  "ironcore",
]
`;

exports[`stores > credential > should return secret 1`] = `
{
  "data": {
    "secret": "cw==",
  },
  "metadata": {
    "name": "aws-secret",
    "namespace": "garden-test",
  },
}
`;

exports[`stores > credential > should return secretBinding 1`] = `
{
  "metadata": {
    "name": "aws-secretbinding",
    "namespace": "garden-test",
  },
  "provider": {
    "type": "aws",
  },
  "secretRef": {
    "name": "aws-secret",
    "namespace": "garden-test",
  },
}
`;
